Se termino de escribir el código del círculo y se creo la carpeta Descuentos, donde escribimos html, css y JS del proyecto

--- a/figuras.html
+++ b/figuras.html
@@ -103,29 +103,30 @@
       <!-- CÍRCULO -->
       <section class="card">
         <div class="card__form-wrapper">
-          <h2 class="card__title">Cuadrado</h2>
+          <h2 class="card__title">Círculo</h2>
           <form class="card__form" action="">
-            <label class="card__label" for="InputCuadrado">
-              Escribe cuánto mide cada lado de tu cuadrado
+            <label class="card__label" for="InputCirculo">
+              Escribe el radio del cirulo para hallar el perímetro y area de un
+              círculo.
             </label>
             <input
               class="card__input"
-              id="InputCuadrado"
+              id="InputCirculo"
               type="number"
-              placeholder="Lado"
+              placeholder="Radio"
             />
             <div class="card__btn-wrapper">
               <button
                 class="card__btn"
                 type="button"
-                onclick="calcularPerimetroCuadrado()"
+                onclick="calcularPerimetroCirculo()"
               >
                 Perímetro
               </button>
               <button
                 class="card__btn"
                 type="button"
-                onclick="calcularAreaCuadrado()"
+                onclick="calcularAreaCirculo()"
               >
                 Área
               </button>
